--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-lottie": "^1.2.3",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^4.4.1"
   },
@@ -29,7 +32,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
